Settings Reset Prompt: move Win-only code to separate file

The ShowSettingsResetPrompt() function was declared as a static
function in the SettingsResetPromptController class. The latter class
is compiled on more than just Windows, but the settings reset prompt
dialog is available on Windows only.

This CL moves all the code that can end up displaying the settings
reset prompt dialog to a win-only file.

Bug: 764811
Change-Id: I486d6ee4c1850c5da65e873c47df1574fce8acb1
Reviewed-on: https://chromium-review.googlesource.com/666979
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Chris Sharp <csharp@chromium.org>
Commit-Queue: Ali Tofigh <alito@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502263}