chrome/browser/safe_browsing/settings_reset_prompt/settings_reset_prompt_controller.h
@@ -12,14 +12,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/macros.h"
 #include "base/strings/string16.h"
 #include "base/time/time.h"
+#include "chrome/browser/profile_resetter/brandcoded_default_settings.h"
+#include "chrome/browser/safe_browsing/settings_reset_prompt/settings_reset_prompt_model.h"
 #include "ui/gfx/range/range.h"
 
-class BrandcodedDefaultSettings;
-class Browser;
-
 namespace safe_browsing {
-
-class SettingsResetPromptModel;
 
 // The |SettingsResetPromptController| class is responsible for providing the
 // text that will be displayed in the settings reset dialog. The controller's
@@ -33,10 +30,6 @@ class SettingsResetPromptController {
   SettingsResetPromptController(
       std::unique_ptr<SettingsResetPromptModel> model,
       std::unique_ptr<BrandcodedDefaultSettings> default_settings);
-
-  static void ShowSettingsResetPrompt(
-      Browser* browser,
-      SettingsResetPromptController* controller);
 
   base::string16 GetWindowTitle() const;
   base::string16 GetButtonLabel() const;
@@ -77,29 +70,6 @@ class SettingsResetPromptController {
 
   DISALLOW_COPY_AND_ASSIGN(SettingsResetPromptController);
 };
-
-// Function to be called after startup in order to display the settings reset
-// prompt. The function will figure out if a prompt is needed, and if so, show
-// the dialog after a delay as determined by the |kSettingsResetPrompt|
-// feature parameters.
-void MaybeShowSettingsResetPromptWithDelay();
-
-// Delegate for MaybeShowSettingsResetPromptWithDelay() that can be overriden
-// by tests that only want to check if the flow for the settings reset prompt
-// will be initiated.
-class SettingsResetPromptDelegate {
- public:
-  SettingsResetPromptDelegate();
-  virtual ~SettingsResetPromptDelegate();
-
-  virtual void ShowSettingsResetPromptWithDelay() const = 0;
-
- private:
-  DISALLOW_COPY_AND_ASSIGN(SettingsResetPromptDelegate);
-};
-
-// Sets the global SettingsResetPromptDelegate, usually for testing.
-void SetSettingsResetPromptDelegate(SettingsResetPromptDelegate* delegate);
 
 }  // namespace safe_browsing
 
