chrome/browser/ui/views/settings_reset_prompt_dialog.cc
@@ -7,6 +7,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "chrome/browser/safe_browsing/settings_reset_prompt/settings_reset_prompt_controller.h"
 #include "chrome/browser/ui/browser.h"
+#include "chrome/browser/ui/browser_dialogs.h"
 #include "chrome/browser/ui/views/frame/browser_view.h"
 #include "chrome/browser/ui/views/harmony/chrome_layout_provider.h"
 #include "components/constrained_window/constrained_window_views.h"
@@ -18,19 +19,18 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/views/view.h"
 #include "ui/views/widget/widget.h"
 
-namespace safe_browsing {
+namespace chrome {
 
-// static
-void SettingsResetPromptController::ShowSettingsResetPrompt(
+void ShowSettingsResetPrompt(
     Browser* browser,
-    SettingsResetPromptController* controller) {
+    safe_browsing::SettingsResetPromptController* controller) {
   SettingsResetPromptDialog* dialog = new SettingsResetPromptDialog(controller);
   // The dialog will delete itself, as implemented in
   // |DialogDelegateView::DeleteDelegate()|, when its widget is closed.
   dialog->Show(browser);
 }
 
-}  // namespace safe_browsing
+}  // namespace chrome
 
 namespace {
 constexpr int kDialogWidth = 448;
