chrome/browser/ui/views/settings_reset_prompt_dialog_browsertest.cc
@@ -23,6 +23,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/safe_browsing/settings_reset_prompt/settings_reset_prompt_model.h"
 #include "chrome/browser/safe_browsing/settings_reset_prompt/settings_reset_prompt_test_utils.h"
 #include "chrome/browser/ui/browser.h"
+#include "chrome/browser/ui/browser_dialogs.h"
 #include "chrome/browser/ui/test/test_browser_dialog.h"
 #include "testing/gmock/include/gmock/gmock.h"
 #include "testing/gtest/include/gtest/gtest.h"
@@ -168,7 +169,7 @@ class SettingsResetPromptDialogTest : public DialogBrowserTest {
     auto model = base::MakeUnique<NiceMock<MockSettingsResetPromptModel>>(
         browser()->profile(), name_to_model_params.find(name)->second);
 
-    safe_browsing::SettingsResetPromptController::ShowSettingsResetPrompt(
+    chrome::ShowSettingsResetPrompt(
         browser(),
         new safe_browsing::SettingsResetPromptController(
             std::move(model), base::MakeUnique<BrandcodedDefaultSettings>()));
